# authwrap_client

./: .gitignore  README.md  main.py  pyproject.toml
authwrap_client/: __init__.py  base.py  config.py  exceptions.py  proxy.py  utils.py  wrap_client.py
authwrap_client/storage/: impl.py  protocol.py
authwrap_client/strategies/: __init__.py  api_key.py  base.py  basic.py  bearer_token.py
authwrap_client/strategies/oauth/: __init__.py  auth.py  common.py  flow_impl.py  flow_protocol.py
authwrap_client/strategies/oauth/flows/: __init__.py  client_credentials.py  implicit.py  password_credentials.py  utils.py
authwrap_client/validate/: service_protocol.py  validator.py
docs/: base.md  exceptions.md  proxy.md  wrap_client.md
docs/storage/: impl.md  protocol.md
docs/strategies/: api_key.md  base.md  basic.md
examples/: httpx_async_example.py  requests_example.py  urllib3_example.py
tests/: test_base_validator.py  test_config_featureflag.py  test_config_state.py  test_requests_support.py  test_strategies_oauth.py  test_strategies_oauth_common.py  test_utils.py  test_wrap_client.py
