[project]
name = "authwrap-client"
version = "0.2.0"
description = "Transparent authorization wrapper for any Python HTTP client."
authors = [{ name = "Björn Schrammel", email = "authwrap@schrammel.dev" }]
dependencies = [
    "wrapt>=1.14.1"
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "mypy>=0.991",
  "ruff>=0.0",
  "black>=22.0",
]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"
